<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.raj.remotemobotics.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:text="Remote Device (192.168.43.66)"
        android:textColor="#000000"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:background="#000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="Connect to Hotspot : Mobotics \n Set your static IP as: 192.168.43.66"
        android:textColor="#000000"
        android:id="@+id/statusTextView"
        android:gravity="center"/>

    <!--1.2-->


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:background="#000"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:text="@string/yaw"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.01"
                    android:background="#000"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:text="@string/pitch"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.01"
                    android:background="#000"/>


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:text="@string/roll"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:id="@+id/yaw"
                    android:gravity="center"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.01"
                    android:background="#000"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:id="@+id/pitch"
                    android:gravity="center"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.01"
                    android:background="#000"/>


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:id="@+id/roll"
                    android:gravity="center"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:textColor="#000000"
                    android:text="@string/kp"
                    android:textSize="20sp"
                    android:gravity="center"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.6"
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:id="@+id/KpInput"/>

                <Button
                    android:id="@+id/kpSend"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="sendPIDValues"
                    android:text="change" />


            </LinearLayout>



            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:textColor="#000000"
                    android:text="@string/ki"
                    android:textSize="20sp"
                    android:gravity="center"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.6"
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:id="@+id/KiInput"/>

                <Button
                    android:id="@+id/kiSend"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="sendPIDValues"
                    android:text="change"/>


            </LinearLayout>



            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:textColor="#000000"
                    android:text="@string/kd"
                    android:textSize="20sp"
                    android:gravity="center"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.6"
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:id="@+id/KdInput"/>

                <Button
                    android:id="@+id/kdSend"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="sendPIDValues"
                    android:text="change"/>


            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/cameraSwitch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textSize="20sp"
                    android:text="CAMERA"/>

            </LinearLayout>



            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/sensorSwitch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textSize="20sp"
                    android:text="SENSOR"/>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.25"
        android:text="Manual Bot Mode"
        android:id="@+id/manualBotMode"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.25"
        android:text="@string/open_camera_settings"
        android:id="@+id/openCamButton"/>



</LinearLayout>
